example/volume-emptydir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune
spec:
  containers:
    - image: luksa/fortune
      name: html-generator 
      volumeMounts: 
        - name: html 
          mountPath: /var/htdocs 
    - image: nginx:alpine 
      name: web-server 
      volumeMounts: 
        - name: html 
          mountPath: /usr/share/nginx/html 
          readOnly: true 
      ports:
        - containerPort: 80
          protocol: TCP
  volumes: 
    - name: html 
      emptyDir: {}
