example/volume-gitrepo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune
spec:
  containers:
    - image: luksa/fortune
      name: html-generator
      resources:
        requests:
          cpu: "500m"
          memory: "100mi"
        limits:
          cpu: "1000m"
          memory: "200mi"
      volumeMounts:
        - name: html
          mountPath: /var/htdocs
    - image: nginx:alpine
      name: web-server
      resources:
        requests:
          cpu: "500m"
          memory: "100mi"
        limits:
          cpu: "1000m"
          memory: "200mi"
      volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
          readOnly: true
      ports:
        - containerPort: 80
          protocol: TCP
  volumes:
    - name: html
      gitRepo: # gitRepo类型Volume，只会在POD创建拉取最新的
        repository: https://github.com/thinkerwolf/kubia-website-example.git
        revision: master # 分支
        directory: .  # 存储在volume的根目录
