example/external-service-externalname.yaml
kind: Service
apiVersion: v1
metadata:
  name: external-service
spec:
  type: ExternalName 
  externalName: someapi.somecompany.com #将真实的ip或者域名隐藏起来
  ports:
    - name: external-service-80
      port: 80
      targetPort: 80
