example/external-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: external-service
spec:
  type: ClusterIP
  ports:
    - name: external-service-80
      port: 80
      targetPort: 80
