example/node-service.yaml
# K8S Service
apiVersion: v1
kind: Service
metadata:
  name: kubia-http
  namespace: hotkey
  labels:
    name: kubia-http
    env: dev
    purpose: study
spec:
  type: LoadBalancer
  externalIPs:
    - 192.168.251.2
  selector:
    app: kubia
  ports:
    - name: kubia-http
      protocol: TCP
      port: 10887 # 可达Service的端口
      targetPort: 10887 # Service转发到的容器的端口
