example/ingress-kubia.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
    - host: kubia.example.com
      http:
        paths:
          - pathType: /
            path: "/"
            backend:
              service:
                name: kubia-nodeport
                port:
                  number: 8081
